# rfr

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: book.yml  ci.yml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  file-format.md  glossary.md  user-guide.md
docs/src/file-format/: chunked.md  chunked_callsites.md  chunked_meta.md  common.md  encoding.md  format-identifier.md  streaming.md
docs/src/user-guide/: converting.md  recording.md  visualizing.md
rfr/: Cargo.toml
rfr-convert/: Cargo.toml
rfr-convert/proto/: PROTO_VERSION.txt
rfr-convert/proto/protos/perfetto/trace/: trace_packet.proto
rfr-convert/src/: collect.rs  convert.rs  main.rs  perfetto.rs
rfr-subscriber/: Cargo.toml
rfr-subscriber/examples/: barrier.rs  long.rs  outside-runtime.rs  ping-pong-chunked.rs  ping-pong.rs  read-file.rs  spawn-chunked.rs  spawn.rs  thousand-tasks.rs
rfr-subscriber/src/: lib.rs
rfr-subscriber/src/subscriber/: chunked.rs  common.rs  layer.rs  mod.rs
rfr-viz/: Cargo.toml
rfr-viz/reference/: spawn.html
rfr-viz/src/: collect.rs  gen.rs  generate.rs  main.rs  section_rules.md  ui.rs
rfr/src/: callsite.rs  chunked.rs  common.rs  identifier.rs  lib.rs  rec.rs
rfr/src/chunked/: callsite.rs  meta.rs  mod.rs  read.rs  record.rs  sequence.rs  write.rs
rfr/src/streamed/: mod.rs  read.rs  write.rs
rfr/tests/: callsite.rs  chunked_sequence.rs  chunked_writer.rs  identifier.rs  identifier_serde.rs  meta.rs
src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
