[package]
name = "rfr-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
postcard = { version = "1.0.8", features = ["alloc", "use-std"] }
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [] }

[dev-dependencies]
tokio = { version = "1.38", features = ["full", "tracing"] }
