[package]
name = "rfr"
version = "0.0.1"
license = "MIT"
rust-version = "1.93.1"
edition = "2024"
authors = ["Hayden Stainsby <hds@caffeineconcepts.com>"]
readme = "README.md"
description = """
A flight recorder for Rust.
"""
categories = ["development-tools::debugging"]
keywords = ["tracing", "debugging"]


[dependencies]
jiff = "0.1"
postcard = { version = "1.0.8", features = ["alloc", "use-std"] }
serde = { version = "1.0.203", features = ["derive"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
